--- a/estilos/style-mobile.css
+++ b/estilos/style-mobile.css
@@ -9,7 +9,7 @@ body, html{
     margin: 0px;
     padding: 0px;
     background-color: rgb(43, 42, 42);
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 main{
     position: relative;
@@ -23,16 +23,20 @@ section{
     margin: auto;
     border-radius: 10px;
     background-color: white;
+    box-shadow: 0px 0px 10px black;
 
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
+    border-radius: 20px;
+    overflow: hidden;
+
+    transition: width 0.5s, height 0.5s;
+    transition-timing-function: ease;
 }
 section > div#imagem{
     background-image: url(/imagens/pexels-dinnow-9444476.jpg);
     height: 25vh;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
     background-position: center center;
     background-size: cover;
     background-attachment: fixed;
